--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <apache.pig.version>0.11.0-SNAPSHOT</apache.pig.version>
     <apache.hadoop.version>0.22.0</apache.hadoop.version>
+    <eclipse.jetty.version>8.1.3.v20120416</eclipse.jetty.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
     
       <!-- Ambrose modules -->
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>ambrose-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>ambrose-pig</artifactId>
@@ -105,6 +111,12 @@
         <version>2.5</version>
         <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.aggregate</groupId>
+        <artifactId>jetty-webapp</artifactId>
+        <version>${eclipse.jetty.version}</version>
+        <scope>runtime</scope>
+      </dependency>
 
       <!-- pig runtime -->
       <dependency>
@@ -134,6 +146,7 @@
     <defaultGoal>package</defaultGoal>
     <pluginManagement>
       <plugins>
+
         <!-- core -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -262,6 +275,7 @@
   </build>
 
   <modules>
+    <module>client</module>
     <module>pig</module>
   </modules>
 </project>
