--- a/pom.xml
+++ b/pom.xml
@@ -39,18 +39,20 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j.version>1.6.4</slf4j.version>
     <apache.pig.version>0.11.0-SNAPSHOT</apache.pig.version>
     <apache.hadoop.version>0.22.0</apache.hadoop.version>
     <eclipse.jetty.version>8.1.3.v20120416</eclipse.jetty.version>
+    <eclipse.jetty.servlet.version>3.0.0.v201112011016</eclipse.jetty.servlet.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-    
+
       <!-- Ambrose modules -->
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>ambrose-client</artifactId>
+        <artifactId>ambrose-core</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -71,21 +73,22 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
+        <version>${slf4j.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
-        <version>1.6.1</version>
+        <version>${slf4j.version}</version>
         <scope>runtime</scope>
+        <optional>true</optional>
       </dependency>
 
       <!-- utils -->
-      <!--<dependency>-->
-        <!--<groupId>com.google.guava</groupId>-->
-        <!--<artifactId>guava</artifactId>-->
-        <!--<version>r11</version>-->
-      <!--</dependency>-->
+      <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+        <version>1.0</version>
+      </dependency>
 
       <!-- serialization -->
       <dependency>
@@ -103,19 +106,17 @@
         <artifactId>xstream</artifactId>
         <version>1.3.1</version>
       </dependency>
-      
+
       <!-- web -->
       <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>provided</scope>
+        <groupId>org.eclipse.jetty.orbit</groupId>
+        <artifactId>javax.servlet</artifactId>
+        <version>${eclipse.jetty.servlet.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty.aggregate</groupId>
         <artifactId>jetty-webapp</artifactId>
         <version>${eclipse.jetty.version}</version>
-        <scope>runtime</scope>
       </dependency>
 
       <!-- pig runtime -->
@@ -125,14 +126,22 @@
         <version>${apache.pig.version}</version>
       </dependency>
 
-      <!-- hadoop common -->
+      <!-- hadoop -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-common</artifactId>
         <version>${apache.hadoop.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
-
-      <!-- hadoop mapred -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-mapred</artifactId>
@@ -275,7 +284,7 @@
   </build>
 
   <modules>
-    <module>client</module>
+    <module>core</module>
     <module>pig</module>
   </modules>
 </project>
