Adding support for multiple graph visualizations with a mocked out DAG pane. Adding DAG coordinates using Azkaban's SugiyamaLayout.

--- a/pig/pom.xml
+++ b/pig/pom.xml
@@ -54,5 +54,11 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapred</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.collections</groupId>
+      <artifactId>google-collections</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
 </project>
