--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,16 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
-
-  <artifactId>ambrose-core</artifactId>
-  <name>Ambrose Core</name>
+  <artifactId>ambrose-common</artifactId>
+  <name>Ambrose Common</name>
 
   <dependencies>
     <!-- testing -->
@@ -31,6 +29,12 @@
       <artifactId>slf4j-simple</artifactId>
     </dependency>
 
+    <!-- utils -->
+    <dependency>
+      <groupId>com.google.collections</groupId>
+      <artifactId>google-collections</artifactId>
+    </dependency>
+
     <!-- serialization -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -44,17 +48,7 @@
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
     </dependency>
-
-    <!-- web -->
-    <dependency>
-      <groupId>org.eclipse.jetty.orbit</groupId>
-      <artifactId>javax.servlet</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty.aggregate</groupId>
-      <artifactId>jetty-webapp</artifactId>
-    </dependency>
-
+    
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
