--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+
   <groupId>com.twitter.ambrose</groupId>
   <artifactId>ambrose</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -15,6 +21,7 @@
     Ambrose is a platform for visualization and real-time monitoring of data
     workflows, supporting various runtimes such as Apache Pig.
   </description>
+
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -22,18 +29,37 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
   <organization>
     <name>Twitter</name>
     <url>http://twitter.com/</url>
   </organization>
+
+  <developers>
+    <developer>
+      <id>bill</id>
+      <name>Bill Graham</name>
+    </developer>
+    <developer>
+      <id>andy</id>
+      <name>Andy Schlaikjer</name>
+    </developer>
+    <developer>
+      <id>nico</id>
+      <name>Nicolas Belmonte</name>
+    </developer>
+  </developers>
+
   <issueManagement>
     <system>github</system>
     <url>https://github.com/twitter/ambrose/issues</url>
   </issueManagement>
+
   <scm>
     <connection>scm:git:https://github.com/twitter/ambrose.git</connection>
     <developerConnection>scm:git:git@github.com:twitter/ambrose.git</developerConnection>
     <url>https://github.com/twitter/ambrose</url>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
@@ -106,11 +132,16 @@
         <version>1.3.1</version>
       </dependency>
 
-      <!-- pig runtime -->
+      <!-- web -->
       <dependency>
-        <groupId>org.apache.pig</groupId>
-        <artifactId>pig</artifactId>
-        <version>${apache.pig.version}</version>
+        <groupId>org.eclipse.jetty.orbit</groupId>
+        <artifactId>javax.servlet</artifactId>
+        <version>${eclipse.jetty.servlet.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.aggregate</groupId>
+        <artifactId>jetty-webapp</artifactId>
+        <version>${eclipse.jetty.version}</version>
       </dependency>
 
       <!-- hadoop -->
@@ -123,12 +154,23 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-mapred</artifactId>
         <version>${apache.hadoop.version}</version>
+      </dependency>
+
+      <!-- pig -->
+      <dependency>
+        <groupId>org.apache.pig</groupId>
+        <artifactId>pig</artifactId>
+        <version>${apache.pig.version}</version>
       </dependency>
 
     </dependencies>
