Changes com.google.collections to com.google.guava and adds guava to bin assembly

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -32,8 +32,8 @@
 
     <!-- utils -->
     <dependency>
-      <groupId>com.google.collections</groupId>
-      <artifactId>google-collections</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
 
     <!-- serialization -->
