--- a/pom.xml
+++ b/pom.xml
@@ -110,9 +110,9 @@
 
       <!-- utils -->
       <dependency>
-        <groupId>com.google.collections</groupId>
-        <artifactId>google-collections</artifactId>
-        <version>1.0</version>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>12.0.1</version>
       </dependency>
 
       <!-- serialization -->
