--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <slf4j.version>1.6.4</slf4j.version>
     <apache.pig.version>0.11.0-SNAPSHOT</apache.pig.version>
     <apache.hadoop.version>0.22.0</apache.hadoop.version>
+    <mortbay.jetty.version>6.1.25</mortbay.jetty.version>
     <eclipse.jetty.version>8.1.3.v20120416</eclipse.jetty.version>
     <eclipse.jetty.servlet.version>3.0.0.v201112011016</eclipse.jetty.servlet.version>
   </properties>
@@ -134,14 +135,9 @@
 
       <!-- web -->
       <dependency>
-        <groupId>org.eclipse.jetty.orbit</groupId>
-        <artifactId>javax.servlet</artifactId>
-        <version>${eclipse.jetty.servlet.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.jetty.aggregate</groupId>
-        <artifactId>jetty-webapp</artifactId>
-        <version>${eclipse.jetty.version}</version>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty</artifactId>
+        <version>${mortbay.jetty.version}</version>
       </dependency>
 
       <!-- hadoop -->
