[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.twitter.ambrose</groupId>
   <artifactId>ambrose</artifactId>
-  <version>0.1.0-T1</version>
+  <version>0.1.0-T2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Ambrose</name>
