--- a/pom.xml
+++ b/pom.xml
@@ -256,9 +256,13 @@
         </plugin>
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.2</version>
+          <version>2.3</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
+            <!-- do not auto push release commits / tag -->
+            <pushChanges>false</pushChanges>
+            <!-- check out from local when releasing -->
+            <localCheckout>true</localCheckout>
           </configuration>
         </plugin>
         <plugin>
