--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.twitter.ambrose</groupId>
   <artifactId>ambrose</artifactId>
-  <version>0.1.0-T2-SNAPSHOT</version>
+  <version>0.1.0+2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Ambrose</name>
