--- a/pig/pom.xml
+++ b/pig/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.1.0-T2</version>
+    <version>0.1.0-T3-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
