--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.1.1-T1</version>
+    <version>0.1.1-T2-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
