--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.2.0-hackweek-T1-SNAPSHOT</version>
+    <version>0.2.0-T1-hackweek-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
