--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.twitter.ambrose</groupId>
   <artifactId>ambrose</artifactId>
-  <version>0.2.0-T1-hackweek</version>
+  <version>0.2.0-T2-hackweek-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Ambrose</name>
@@ -57,7 +57,7 @@
     <connection>scm:git:https://github.com/twitter/ambrose.git</connection>
     <developerConnection>scm:git:git@github.com:twitter/ambrose.git</developerConnection>
     <url>https://github.com/twitter/ambrose</url>
-    <tag>ambrose-0.2.0-T1-hackweek</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
