Project naming typo

--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -10,7 +10,7 @@
 
   <artifactId>ambrose-hive</artifactId>
   
-  <name>Ambrose</name>
+  <name>Ambrose Hive</name>
   <url>https://github.com/lbendig/ambrose/tree/ambrose-hive</url>
   <inceptionYear>2013</inceptionYear>
   <description>
