--- a/pom.xml
+++ b/pom.xml
@@ -158,23 +158,7 @@
         <version>${mortbay.jetty.servlet.version}</version>
       </dependency>
 
-      <!-- hadoop --> <!--
-      <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-common</artifactId>
-        <version>${apache.hadoop.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
--->
+      <!-- hadoop --> 
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-core</artifactId>
