Reverted the pom.xml files to normal by copying the original pom.xml from git.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -69,7 +69,7 @@
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-mapred</artifactId>
     </dependency>
   </dependencies>
 
