--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -107,6 +107,14 @@
       <artifactId>jdo-api</artifactId>
       <version>3.0.1</version>
     </dependency>
+    
+    <!-- for @Nullable annotation -->
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>1.3.9</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
