--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
         <artifactId>ambrose-hive</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>ambrose-cascading</artifactId>
+        <version>${project.version}</version>
+      </dependency>
 
       <!-- testing -->
       <dependency>
@@ -202,6 +207,13 @@
         <groupId>org.apache.hive</groupId>
         <artifactId>hive-cli</artifactId>
         <version>${apache.hive.version}</version>
+      </dependency>
+
+      <!-- cascading -->
+      <dependency>
+        <groupId>cascading</groupId>
+        <artifactId>cascading</artifactId>
+        <version>${cascading.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -344,7 +356,7 @@
 
   <modules>
     <module>common</module>
-    <module>pig</module>
     <module>hive</module>
+    <module>cascading</module>
   </modules>
 </project>
