--- a/cascading/pom.xml
+++ b/cascading/pom.xml
@@ -15,66 +15,44 @@
 
   <repositories>
     <repository>
-      <id>apache</id>
-      <name>Apache Repos</name>
-      <url>https://repository.apache.org/content/groups/public/</url>
-      <releases><enabled>true</enabled></releases>
-      <snapshots><enabled>true</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>ambrose-cascading</id>
-      <url>https://github.com/ahmed--mohsen/ambroseCascading-mvn-repo/raw/master/repository</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <id>conjars.org</id>
+      <url>http://conjars.org/repo</url>
     </repository>
   </repositories>
 
   <dependencies>
-      <!-- modified cascading -->
-     <dependency>
-      <groupId>com.cascading</groupId>
+    <dependency>
+      <groupId>cascading</groupId>
       <artifactId>cascading-core</artifactId>
-      <version>1.0</version>
+      <version>2.5.0-wip-77</version>
     </dependency>
+
     <dependency>
-      <groupId>com.cascading</groupId>
-      <artifactId>cascading-hadoop</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.cascading</groupId>
-      <artifactId>cascading-xml</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.cascading</groupId>
+      <groupId>cascading</groupId>
       <artifactId>cascading-local</artifactId>
-      <version>1.0</version>
+      <version>2.5.0-wip-77</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-hadoop</artifactId>
+      <version>2.5.0-wip-77</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-xml</artifactId>
+      <version>2.5.0-wip-77</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-platform</artifactId>
+      <version>2.5.0-wip-77</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- cascading dependences -->
-    <dependency>
-      <groupId>janino</groupId>
-      <artifactId>janino</artifactId>
-      <version>2.5.10</version>
-    </dependency>
-    <dependency>
-      <groupId>com.commons</groupId>
-      <artifactId>commons-compiler</artifactId>
-      <version>1.0</version>
-    </dependency>
-
-
-    <!-- cascading xml -->
-    <dependency>
-      <groupId>org.ccil.cowan.tagsoup</groupId>
-      <artifactId>tagsoup</artifactId>
-      <version>1.2.1</version>
-    </dependency>
 
     <!-- ambrose -->
     <dependency>
@@ -113,12 +91,7 @@
       <artifactId>servlet-api</artifactId>
       <version>${mortbay.jetty.servlet.version}</version>
     </dependency>
-    <dependency>
-    	<groupId>org.jgrapht</groupId>
-    	<artifactId>jgrapht-jdk1.5</artifactId>
-    	<version>0.7.3</version>
-    </dependency>
-
+    
     <!-- testing -->
     <dependency>
       <groupId>junit</groupId>
