--- a/scalding/pom.xml
+++ b/scalding/pom.xml
@@ -13,6 +13,14 @@
   <artifactId>ambrose-scalding</artifactId>
   <name>Ambrose Scalding</name>
 
+  <repositories>
+    <repository>
+      <id>conjars.org</id>
+      <url>http://conjars.org/repo</url>
+    </repository>
+  </repositories>
+
+
   <dependencies>
     <!-- ambrose -->
 
