--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.5</slf4j.version>
     <fasterxml.jackson.version>2.1.1</fasterxml.jackson.version>
-    <apache.pig.version>0.11.1</apache.pig.version>
+    <apache.pig.version>0.12.1</apache.pig.version>
     <apache.hive.version>0.12.0</apache.hive.version>
-    <apache.hadoop.version>0.22.0</apache.hadoop.version>
+    <apache.hadoop.version>1.0.4</apache.hadoop.version>
     <mortbay.jetty.version>6.1.25</mortbay.jetty.version>
     <mortbay.jetty.servlet.version>2.5-20081211</mortbay.jetty.servlet.version>
-    <cascading.version>2.5.0-wip-77</cascading.version>
-    <scalding.version>0.9.0rc4</scalding.version>
+    <cascading.version>2.5.2</cascading.version>
+    <scalding.version>0.9.1</scalding.version>
     <scala.version>2.9.2</scala.version>
   </properties>
   <dependencyManagement>
@@ -169,7 +169,7 @@
       <!-- hadoop -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-common</artifactId>
+        <artifactId>hadoop-core</artifactId>
         <version>${apache.hadoop.version}</version>
         <exclusions>
           <exclusion>
@@ -181,12 +181,6 @@
             <artifactId>jetty</artifactId>
           </exclusion>
         </exclusions>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-mapred</artifactId>
-        <version>${apache.hadoop.version}</version>
         <scope>provided</scope>
       </dependency>
 
