--- a/scalding/pom.xml
+++ b/scalding/pom.xml
@@ -54,7 +54,7 @@
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-mapred</artifactId>
+      <artifactId>hadoop-core</artifactId>
     </dependency>
   </dependencies>
 
