--- a/common/pom.xml
+++ b/common/pom.xml
@@ -73,4 +73,13 @@
     </dependency>
   </dependencies>
 
+  <!-- hraven -->
+    <dependency>
+       <groupId>com.twitter.hraven</groupId>
+       <artifactId>hraven-core</artifactId>
+    </dependency>
+    <dependency>
+       <groupId>org.apache.hbase</groupId>
+       <artifactId>hbase</artifactId>
+    </dependency>
 </project>
