Find subtypes of Job dynamically using reflections library

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -51,6 +51,10 @@
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
     </dependency>
+    <dependency>
+       <groupId>org.reflections</groupId>
+       <artifactId>reflections</artifactId>
+    </dependency>
 
     <!-- web -->
     <dependency>
