--- a/cascading/pom.xml
+++ b/cascading/pom.xml
@@ -46,7 +46,7 @@
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
 
     <!-- cascading -->
