--- a/common/pom.xml
+++ b/common/pom.xml
@@ -73,7 +73,7 @@
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
 
     <!-- hraven -->
