--- a/pig/pom.xml
+++ b/pig/pom.xml
@@ -37,7 +37,7 @@
     <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
+      <artifactId>hadoop-core</artifactId>
     </dependency>
 
     <!-- serialization -->
