--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <apache.hadoop.version>2.4.0</apache.hadoop.version>
+    <apache.hadoop.version>1.2.1</apache.hadoop.version>
     <apache.hbase.version>0.94.25</apache.hbase.version>
     <apache.hive.version>0.13.0</apache.hive.version>
     <apache.pig.version>0.13.0</apache.pig.version>
@@ -194,7 +194,7 @@
       <!-- hadoop -->
       <dependency>
         <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-common</artifactId>
+        <artifactId>hadoop-core</artifactId>
         <version>${apache.hadoop.version}</version>
         <exclusions>
           <exclusion>
