Add cascading3 support

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <apache.hive.version>0.13.0</apache.hive.version>
     <apache.pig.version>0.14.0</apache.pig.version>
     <cascading.version>2.5.5</cascading.version>
+    <cascading3.version>3.1.0-wip-52</cascading3.version>
     <fasterxml.jackson.version>2.4.4</fasterxml.jackson.version>
     <google.guava.version>18.0</google.guava.version>
     <junit.version>4.12</junit.version>
@@ -101,6 +102,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>ambrose-cascading</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>ambrose-cascading3</artifactId>
         <version>${project.version}</version>
       </dependency>
 
@@ -470,6 +476,7 @@
     <module>pig</module>
     <module>hive</module>
     <module>cascading</module>
+    <module>cascading3</module>
     <module>scalding</module>
   </modules>
 </project>
